[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "asic2mqtt"
description = "Универсальный проект для подключения к API асиков Antminer и Whatsminer с получением статистики и отправкой данных в MQTT"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "LampGraph", email = "LampGraph@gmail.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.7"
dependencies = [
    "whatsminer",
    "paho-mqtt",
    "semantic_version",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/Klaster19/asic2mqtt"
"Bug Tracker" = "https://github.com/Klaster19/asic2mqtt/issues"

[project.scripts]
asic2mqtt = "asic2mqtt:main"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "dirty-tag"